--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -1,20 +1,4 @@
-breakfast:
+fetchmail:
   cron: 0 8 * * *
-  class: Eat
-  args: scrambled egg
-  description: Breakfast
-lunch:
-  cron: 0 12 * * *
-  class: Eat
-  args: penut-butter and jelly sandwich
-  description: Lunch
-dinner:
-  cron: 0 6 * * *
-  class: Eat
-  args: Steak
-  description: Dinner
-midnight_snack:
-  cron: 0 0 * * *
-  class: Eat
-  args: Milk & Cookies
-  description: Midnight Snack
+  class: Reminder
+  description: Fetch Mail
