--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,11 +5,16 @@ upstream unicorn {
 server {
   listen 8000 default;
   server_name mrpink.siyelo.com;
-  root /vagrant/public;
+  root /home/deployer/apps/radmeet/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
     proxy_pass http://unicorn;
   }
 
   error_page 500 502 503 504 /500.html;
+
+  gzip_static on; # to serve pre-gzipped version
+  expires max;
+  add_header Cache-Control public;
 }
+
