worker cycle is every 5 seconds

--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -1,10 +1,10 @@
 fetchmail:
-  cron: "* * * * *"
+  cron: "*/12 * * * *"
   class: FetchMailWorker
   description: Fetch Mail
   queue: fetch_queue
 queuemail:
-  cron: "* * * * *"
+  cron: "*/12 * * * *"
   class: QueueMailWorker
   description: Queue Mail for Sending
   queue: queue_queue
