setup reverse proxy for jenkins

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,8 +3,16 @@ upstream unicorn {
 }
 
 server {
-  listen 8000 default;
+  listen 80;
   server_name mrpink.siyelo.com;
+  location / {
+    proxy_pass http://127.0.0.1:8080;
+  }
+}
+
+server {
+  listen 80 default;
+  server_name hound.cc;
   root /home/deployer/apps/radmeet/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
