--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,6 +16,9 @@ server {
   root /home/deployer/apps/radmeet/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
     proxy_pass http://unicorn;
   }
 
