trying to get asset pipeline working on prod

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -27,5 +27,14 @@ server {
   gzip_static on; # to serve pre-gzipped version
   expires max;
   add_header Cache-Control public;
+
+  location ~ ^/assets/ {
+    expires 1y;
+    add_header Cache-Control public;
+
+    add_header ETag "";
+    break;
+  }
+
 }
 
