change to Postgres, refactor tokens add missing specs

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+/db/*.sqlite3-*
+/db/*.gz
+/db/*.db
+/db/*.tgz
+
+/config/database.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
