--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 upstream unicorn {
-  server unix:/tmp/unicorn.radmeet.sock fail_timeout=0;
+  server unix:/tmp/unicorn.hound.sock fail_timeout=0;
 }
 
 server {
@@ -13,7 +13,7 @@ server {
 server {
   listen 80 default;
   server_name hound.cc;
-  root /home/deployer/apps/radmeet/public;
+  root /home/deployer/apps/hound/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
