Clean reminders older than 2 weeks

--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -3,3 +3,8 @@ queuemail:
   class: QueueMailJob
   description: Queue Mail for Sending
   queue: process_queue
+queueclean:
+  cron: "0 * * * *"
+  class: CleanMailJob
+  description: Queue for cleaning reminders
+  queue: clean_queue
